messenger/include/dna/dna_engine.h

/**
 * Get DNA Connect version string
 *
 * @return Version string (e.g., "0.2.5") - do not free
 */
DNA_API const char* dna_engine_get_version(void);
/* ============================================================================
 * OPAQUE TYPES
 * ============================================================================ */

typedef struct dna_engine dna_engine_t;
typedef uint64_t dna_request_id_t;
/**
 * Contact request information (ICQ-style request)
 */
typedef struct {
    char fingerprint[129];      /* Requester's fingerprint (128 hex + null) */
    char display_name[64];      /* Requester's display name */
    char message[256];          /* Optional request message */
    uint64_t requested_at;      /* Unix timestamp when request was sent */
    int status;                 /* 0=pending, 1=approved, 2=denied */
} dna_contact_request_t;
/**
 * Blocked user information
 */
typedef struct {
    char fingerprint[129];      /* Blocked user's fingerprint */
    uint64_t blocked_at;        /* Unix timestamp when blocked */
    char reason[256];           /* Optional reason for blocking */
} dna_blocked_user_t;
/**
 * Wallet information (Cellframe)
 */
typedef struct {
    char name[256];             /* Wallet name */
    char address[120];          /* Primary address */
    int sig_type;               /* 0=Dilithium, 1=Picnic, 2=Bliss, 3=Tesla */
    bool is_protected;          /* Password protected */
} dna_wallet_t;
/**
 * Token balance
 */
typedef struct {
    char token[32];             /* Token ticker (CPUNK, CELL, KEL) */
    char balance[64];           /* Formatted balance string */
    char network[64];           /* Network name (Backbone, KelVPN) */
} dna_balance_t;
/**
 * Transaction record
 */
typedef struct {
    char tx_hash[128];          /* Transaction hash */
    char direction[16];         /* "sent" or "received" */
    char amount[64];            /* Formatted amount */
    char token[32];             /* Token ticker */
    char other_address[120];    /* Other party's address */
    char timestamp[32];         /* Formatted timestamp */
    char status[32];            /* ACCEPTED, DECLINED, PENDING */
} dna_transaction_t;
/**
 * User profile information (wallet addresses, socials, bio, avatar)
 * Synced with DHT dna_unified_identity_t structure
 */
typedef struct {
    /* Cellframe wallet addresses */
    char backbone[120];
    char alvin[120];            /* Alvin (cpunk mainnet) */

    /* External wallet addresses */
    char eth[128];              /* Ethereum address */
    char sol[128];
    char trx[128];              /* TRON address (T...) */
    char bsc[128];              /* BSC address (EVM-compatible) */

    /* Social links */
    char telegram[128];
    char twitter[128];          /* X (Twitter) handle */
    char github[128];
    char facebook[128];
    char instagram[128];
    char linkedin[128];
    char google[128];

    /* Profile info */
    char bio[512];
    char location[128];
    char website[256];
    char avatar_base64[20484];  /* Base64-encoded 64x64 PNG/JPEG (~20KB max) */
} dna_profile_t;
/* ============================================================================
 * ASYNC CALLBACK TYPES
 * ============================================================================ */

/**
 * Generic completion callback (success/error only)
 * Error is 0 (DNA_OK) on success, negative on error
 */
typedef void (*dna_completion_cb)(
    dna_request_id_t request_id,
    int error,
    void *user_data
);
/**
 * Display name callback
 */
typedef void (*dna_display_name_cb)(
    dna_request_id_t request_id,
    int error,
    const char *display_name,
    void *user_data
);
/**
 * Group created callback
 */
typedef void (*dna_group_created_cb)(
    dna_request_id_t request_id,
    int error,
    const char *group_uuid,     /* New group UUID (37 chars) */
    void *user_data
);
/**
 * Create new group
 *
 * Creates group with GEK (Group Encryption Key) encryption.
 *
 * @param engine              Engine instance
 * @param name                Group name
 * @param member_fingerprints Array of member fingerprints
 * @param member_count        Number of members
 * @param callback            Called with new group UUID
 * @param user_data           User data for callback
 * @return                    Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_create_group(
    dna_engine_t *engine,
    const char *name,
    const char **member_fingerprints,
    int member_count,
    dna_group_created_cb callback,
    void *user_data
);
/**
 * Sync a specific group from DHT to local cache
 *
 * Uses the group UUID to fetch metadata from DHT and update local database.
 * Useful for recovering groups after database reset.
 *
 * @param engine      Engine instance
 * @param group_uuid  Group UUID (36 chars)
 * @param callback    Called on completion
 * @param user_data   User data for callback
 * @return            Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_sync_group_by_uuid(
    dna_engine_t *engine,
    const char *group_uuid,
    dna_completion_cb callback,
    void *user_data
);
/**
 * Get registered name for current identity
 *
 * Performs DHT reverse lookup (fingerprint -> name).
 *
 * @param engine    Engine instance
 * @param callback  Called with display name (or empty if not registered)
 * @param user_data User data for callback
 * @return          Request ID (0 on immediate error)
 */
DNA_API dna_request_id_t dna_engine_get_registered_name(
    dna_engine_t *engine,
    dna_display_name_cb callback,
    void *user_data
);
/**
 * Check if DHT is connected
 *
 * Returns the current DHT connection status. Use this to query status
 * for UI indicators when the event-based status may have been missed.
 *
 * @param engine    Engine instance
 * @return          1 if connected, 0 if not connected
 */
DNA_API int dna_engine_is_dht_connected(dna_engine_t *engine);
/* ============================================================================
 * LOG CONFIGURATION
 * ============================================================================ */

/**
 * Get current log level
 *
 * @return Log level string: "DEBUG", "INFO", "WARN", "ERROR", or "NONE"
 */
DNA_API const char* dna_engine_get_log_level(void);
/**
 * Set log level
 *
 * @param level  Log level: "DEBUG", "INFO", "WARN", "ERROR", or "NONE"
 * @return       0 on success, -1 on error
 */
DNA_API int dna_engine_set_log_level(const char *level);
/**
 * Get current log tags filter
 *
 * @return Comma-separated tags string (empty = show all)
 */
DNA_API const char* dna_engine_get_log_tags(void);
/**
 * Set log tags filter
 *
 * @param tags  Comma-separated tags to show (empty = show all)
 * @return      0 on success, -1 on error
 */
DNA_API int dna_engine_set_log_tags(const char *tags);
/**
 * Free contact requests array returned by callbacks
 */
DNA_API void dna_free_contact_requests(dna_contact_request_t *requests, int count);
/**
 * Free blocked users array returned by callbacks
 */
DNA_API void dna_free_blocked_users(dna_blocked_user_t *blocked, int count);
/**
 * Free wallets array returned by callbacks
 */
DNA_API void dna_free_wallets(dna_wallet_t *wallets, int count);
/**
 * Free balances array returned by callbacks
 */
DNA_API void dna_free_balances(dna_balance_t *balances, int count);
/**
 * Free transactions array returned by callbacks
 */
DNA_API void dna_free_transactions(dna_transaction_t *transactions, int count);
/**
 * Free profile returned by callbacks
 */
DNA_API void dna_free_profile(dna_profile_t *profile);
/* ============================================================================
 * DEBUG LOG API - In-app log viewing for mobile debugging
 * ============================================================================ */

/**
 * Debug log entry structure (matches qgp_log_entry_t)
 */
typedef struct {
    uint64_t timestamp_ms;      /* Unix timestamp in milliseconds */
    int level;                  /* 0=DEBUG, 1=INFO, 2=WARN, 3=ERROR */
    char tag[32];               /* Module/tag name */
    char message[256];          /* Log message */
} dna_debug_log_entry_t;
/**
 * Enable/disable debug log ring buffer
 *
 * When enabled, logs are captured to an in-memory ring buffer
 * that can be viewed in the app. Disabled by default for performance.
 *
 * @param enabled   true to enable, false to disable
 */
DNA_API void dna_engine_debug_log_enable(bool enabled);
/**
 * Check if debug logging is enabled
 *
 * @return true if debug log ring buffer is active
 */
DNA_API bool dna_engine_debug_log_is_enabled(void);
/**
 * Get debug log entries from ring buffer
 *
 * Returns up to max_entries log entries in chronological order.
 * Caller must allocate the entries array.
 *
 * @param entries       Array to fill with log entries
 * @param max_entries   Maximum entries to return
 * @return              Number of entries actually filled
 */
DNA_API int dna_engine_debug_log_get_entries(dna_debug_log_entry_t *entries, int max_entries);
/**
 * Get number of entries in debug log buffer
 *
 * @return Number of log entries currently stored
 */
DNA_API int dna_engine_debug_log_count(void);
/**
 * Clear all debug log entries
 */
DNA_API void dna_engine_debug_log_clear(void);
/**
 * Add a log message from external code (e.g., Dart/Flutter)
 * @param tag Log tag (e.g., "FLUTTER")
 * @param message Log message
 */
DNA_API void dna_engine_debug_log_message(const char *tag, const char *message);
/**
 * Add a log message with explicit level from external code
 * @param tag Log tag (e.g., "FLUTTER")
 * @param message Log message
 * @param level Log level: 0=DEBUG, 1=INFO, 2=WARN, 3=ERROR
 */
DNA_API void dna_engine_debug_log_message_level(const char *tag, const char *message, int level);
/* ============================================================================
 * VERSION CHECK API - DHT-based version announcements
 * ============================================================================ */

/**
 * Version information from DHT
 */
typedef struct {
    char library_current[32];   /* Latest library version (e.g., "0.3.90") */
    char library_minimum[32];   /* Minimum supported library version */
    char app_current[32];       /* Latest app version (e.g., "0.99.29") */
    char app_minimum[32];       /* Minimum supported app version */
    char nodus_current[32];     /* Latest nodus version (e.g., "0.4.3") */
    char nodus_minimum[32];     /* Minimum supported nodus version */
    uint64_t published_at;      /* Unix timestamp when published */
    char publisher[129];        /* Fingerprint of publisher */
} dna_version_info_t;
/**
 * Version check result
 */
typedef struct {
    bool library_update_available;  /* true if library_current > local version */
    bool app_update_available;      /* true if app_current > local version */
    bool nodus_update_available;    /* true if nodus_current > local version */
    bool library_below_minimum;     /* true if local version < library_minimum (BLOCKS APP) */
    bool app_below_minimum;         /* true if local app version < app_minimum (BLOCKS APP) */
    dna_version_info_t info;        /* Version info from DHT */
} dna_version_check_result_t;
/**
 * Check version info from DHT
 *
 * Fetches version information from DHT and compares against local versions.
 * Sets update_available flags if newer versions exist.
 *
 * @param engine     Engine instance
 * @param result_out Output: version check result (caller provides buffer)
 * @return           0 on success, -1 on error, -2 if not found
 */
DNA_API int dna_engine_check_version_dht(
    dna_engine_t *engine,
    dna_version_check_result_t *result_out
);