messenger/crypto/bip39/bip39.h

/**
 * Generate random BIP39 mnemonic
 *
 * @param word_count Number of words (12, 15, 18, 21, or 24)
 * @param mnemonic Output buffer for mnemonic phrase
 * @param mnemonic_size Size of output buffer
 * @return 0 on success, -1 on error
 *
 * Generates a random BIP39 mnemonic with the specified word count.
 * Uses cryptographically secure random number generator.
 */
DNA_API int bip39_generate_mnemonic(
    int word_count,
    char *mnemonic,
    size_t mnemonic_size
);
/**
 * Validate BIP39 mnemonic
 *
 * @param mnemonic Space-separated mnemonic phrase
 * @return true if valid, false otherwise
 *
 * Validates a BIP39 mnemonic by:
 * 1. Checking word count (12, 15, 18, 21, or 24)
 * 2. Verifying all words exist in BIP39 wordlist
 * 3. Verifying checksum bits
 */
DNA_API bool bip39_validate_mnemonic(const char *mnemonic);
/**
 * Derive QGP signing and encryption seeds from BIP39 mnemonic
 *
 * @param mnemonic BIP39 mnemonic phrase (12, 15, 18, 21, or 24 words)
 * @param passphrase Optional passphrase (empty string if none)
 * @param signing_seed Output buffer for signing seed (32 bytes)
 * @param encryption_seed Output buffer for encryption seed (32 bytes)
 * @return 0 on success, -1 on error
 *
 * Uses BIP39 to generate a 64-byte master seed, then derives:
 * - signing_seed = SHAKE256(master_seed || "qgp-signing-v1", 32)
 * - encryption_seed = SHAKE256(master_seed || "qgp-encryption-v1", 32)
 */
DNA_API int qgp_derive_seeds_from_mnemonic(
    const char *mnemonic,
    const char *passphrase,
    uint8_t signing_seed[32],
    uint8_t encryption_seed[32]
);
/**
 * Derive QGP seeds AND master seed from BIP39 mnemonic
 *
 * Same as qgp_derive_seeds_from_mnemonic() but also returns the
 * 64-byte master seed for multi-chain wallet derivation (BIP-44).
 *
 * @param mnemonic BIP39 mnemonic phrase (12, 15, 18, 21, or 24 words)
 * @param passphrase Optional passphrase (empty string if none)
 * @param signing_seed Output buffer for signing seed (32 bytes)
 * @param encryption_seed Output buffer for encryption seed (32 bytes)
 * @param master_seed_out Output buffer for 64-byte master seed (for ETH/BTC), or NULL
 * @return 0 on success, -1 on error
 */
DNA_API int qgp_derive_seeds_with_master(
    const char *mnemonic,
    const char *passphrase,
    uint8_t signing_seed[32],
    uint8_t encryption_seed[32],
    uint8_t master_seed_out[64]
);