messenger/dna_messenger_flutter/lib/ffi/dna_bindings.dart


  late final _dna_free_contact_requests = _lib.lookupFunction<
      Void Function(Pointer<dna_contact_request_t>, Int32),
      void Function(Pointer<dna_contact_request_t>, int)>('dna_free_contact_requests');

  void dna_free_contact_requests(Pointer<dna_contact_request_t> requests, int count) {
    _dna_free_contact_requests(requests, count);
  }

  late final _dna_free_blocked_users = _lib.lookupFunction<
      Void Function(Pointer<dna_blocked_user_t>, Int32),
      void Function(Pointer<dna_blocked_user_t>, int)>('dna_free_blocked_users');

  void dna_free_blocked_users(Pointer<dna_blocked_user_t> blocked, int count) {
    _dna_free_blocked_users(blocked, count);
  }

  late final _dna_free_wallets = _lib.lookupFunction<
      Void Function(Pointer<dna_wallet_t>, Int32),
      void Function(Pointer<dna_wallet_t>, int)>('dna_free_wallets');

  void dna_free_wallets(Pointer<dna_wallet_t> wallets, int count) {
    _dna_free_wallets(wallets, count);
  }

  late final _dna_free_balances = _lib.lookupFunction<
      Void Function(Pointer<dna_balance_t>, Int32),
      void Function(Pointer<dna_balance_t>, int)>('dna_free_balances');

  void dna_free_balances(Pointer<dna_balance_t> balances, int count) {
    _dna_free_balances(balances, count);
  }

  late final _dna_free_transactions = _lib.lookupFunction<
      Void Function(Pointer<dna_transaction_t>, Int32),
      void Function(Pointer<dna_transaction_t>, int)>('dna_free_transactions');

  void dna_free_transactions(Pointer<dna_transaction_t> transactions, int count) {
    _dna_free_transactions(transactions, count);
  }

  late final _dna_free_profile = _lib.lookupFunction<
      Void Function(Pointer<dna_profile_t>),
      void Function(Pointer<dna_profile_t>)>('dna_free_profile');

  void dna_free_profile(Pointer<dna_profile_t> profile) {
    _dna_free_profile(profile);
  }

  // ---------------------------------------------------------------------------
  // GROUPS - CREATE GROUP (was missing)
  // ---------------------------------------------------------------------------

  late final _dna_engine_create_group = _lib.lookupFunction<
      Uint64 Function(
          Pointer<dna_engine_t>,
          Pointer<Utf8>,
          Pointer<Pointer<Utf8>>,
          Int32,
          Pointer<DnaGroupCreatedCb>,
          Pointer<Void>),
      int Function(
          Pointer<dna_engine_t>,
          Pointer<Utf8>,
          Pointer<Pointer<Utf8>>,
          int,
          Pointer<DnaGroupCreatedCb>,
          Pointer<Void>)>('dna_engine_create_group');

  int dna_engine_create_group(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> name,
    Pointer<Pointer<Utf8>> member_fingerprints,
    int member_count,
    Pointer<DnaGroupCreatedCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_create_group(
        engine, name, member_fingerprints, member_count, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // GROUPS - SYNC GROUP BY UUID
  // ---------------------------------------------------------------------------

  late final _dna_engine_sync_group_by_uuid = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<Utf8>,
          Pointer<DnaCompletionCb>, Pointer<Void>)>('dna_engine_sync_group_by_uuid');

  int dna_engine_sync_group_by_uuid(
    Pointer<dna_engine_t> engine,
    Pointer<Utf8> group_uuid,
    Pointer<DnaCompletionCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_sync_group_by_uuid(engine, group_uuid, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // IDENTITY - GET REGISTERED NAME (was missing)
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_registered_name = _lib.lookupFunction<
      Uint64 Function(Pointer<dna_engine_t>, Pointer<DnaDisplayNameCb>,
          Pointer<Void>),
      int Function(Pointer<dna_engine_t>, Pointer<DnaDisplayNameCb>,
          Pointer<Void>)>('dna_engine_get_registered_name');

  int dna_engine_get_registered_name(
    Pointer<dna_engine_t> engine,
    Pointer<DnaDisplayNameCb> callback,
    Pointer<Void> user_data,
  ) {
    return _dna_engine_get_registered_name(engine, callback, user_data);
  }

  // ---------------------------------------------------------------------------
  // BIP39 FUNCTIONS
  // ---------------------------------------------------------------------------

  late final _bip39_generate_mnemonic = _lib.lookupFunction<
      Int32 Function(Int32, Pointer<Utf8>, Size),
      int Function(int, Pointer<Utf8>, int)>('bip39_generate_mnemonic');

  /// Generate random BIP39 mnemonic
  /// Returns 0 on success, -1 on error
  int bip39_generate_mnemonic(
    int word_count,
    Pointer<Utf8> mnemonic,
    int mnemonic_size,
  ) {
    return _bip39_generate_mnemonic(word_count, mnemonic, mnemonic_size);
  }

  late final _bip39_validate_mnemonic = _lib.lookupFunction<
      Bool Function(Pointer<Utf8>),
      bool Function(Pointer<Utf8>)>('bip39_validate_mnemonic');

  /// Validate BIP39 mnemonic
  bool bip39_validate_mnemonic(Pointer<Utf8> mnemonic) {
    return _bip39_validate_mnemonic(mnemonic);
  }

  late final _qgp_derive_seeds_from_mnemonic = _lib.lookupFunction<
      Int32 Function(
          Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>),
      int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint8>,
          Pointer<Uint8>)>('qgp_derive_seeds_from_mnemonic');

  /// Derive signing and encryption seeds from BIP39 mnemonic
  /// Returns 0 on success, -1 on error
  int qgp_derive_seeds_from_mnemonic(
    Pointer<Utf8> mnemonic,
    Pointer<Utf8> passphrase,
    Pointer<Uint8> signing_seed,
    Pointer<Uint8> encryption_seed,
  ) {
    return _qgp_derive_seeds_from_mnemonic(
        mnemonic, passphrase, signing_seed, encryption_seed);
  }

  late final _qgp_derive_seeds_with_master = _lib.lookupFunction<
      Int32 Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>),
      int Function(Pointer<Utf8>, Pointer<Utf8>, Pointer<Uint8>, Pointer<Uint8>,
          Pointer<Uint8>)>('qgp_derive_seeds_with_master');

  /// Derive signing, encryption seeds AND 64-byte master seed from BIP39 mnemonic
  /// master_seed_out receives the 64-byte BIP39 master seed for multi-chain wallet derivation
  /// Returns 0 on success, -1 on error
  int qgp_derive_seeds_with_master(
    Pointer<Utf8> mnemonic,
    Pointer<Utf8> passphrase,
    Pointer<Uint8> signing_seed,
    Pointer<Uint8> encryption_seed,
    Pointer<Uint8> master_seed_out,
  ) {
    return _qgp_derive_seeds_with_master(
        mnemonic, passphrase, signing_seed, encryption_seed, master_seed_out);
  }

  // ---------------------------------------------------------------------------
  // VERSION
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_version = _lib.lookupFunction<
      Pointer<Utf8> Function(),
      Pointer<Utf8> Function()>('dna_engine_get_version');

  Pointer<Utf8> dna_engine_get_version() {
    return _dna_engine_get_version();
  }

  late final _dna_engine_check_version_dht = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>, Pointer<dna_version_check_result_t>),
      int Function(Pointer<dna_engine_t>, Pointer<dna_version_check_result_t>)>('dna_engine_check_version_dht');

  int dna_engine_check_version_dht(Pointer<dna_engine_t> engine, Pointer<dna_version_check_result_t> result) {
    return _dna_engine_check_version_dht(engine, result);
  }

  // ---------------------------------------------------------------------------
  // DHT STATUS
  // ---------------------------------------------------------------------------

  late final _dna_engine_is_dht_connected = _lib.lookupFunction<
      Int32 Function(Pointer<dna_engine_t>),
      int Function(Pointer<dna_engine_t>)>('dna_engine_is_dht_connected');

  int dna_engine_is_dht_connected(Pointer<dna_engine_t> engine) {
    return _dna_engine_is_dht_connected(engine);
  }

  // ---------------------------------------------------------------------------
  // LOG CONFIGURATION
  // ---------------------------------------------------------------------------

  late final _dna_engine_get_log_level = _lib.lookupFunction<
      Pointer<Utf8> Function(),
      Pointer<Utf8> Function()>('dna_engine_get_log_level');

  Pointer<Utf8> dna_engine_get_log_level() {
    return _dna_engine_get_log_level();
  }

  late final _dna_engine_set_log_level = _lib.lookupFunction<
      Int32 Function(Pointer<Utf8>),
      int Function(Pointer<Utf8>)>('dna_engine_set_log_level');

  int dna_engine_set_log_level(Pointer<Utf8> level) {
    return _dna_engine_set_log_level(level);
  }

  late final _dna_engine_get_log_tags = _lib.lookupFunction<
      Pointer<Utf8> Function(),
      Pointer<Utf8> Function()>('dna_engine_get_log_tags');

  Pointer<Utf8> dna_engine_get_log_tags() {
    return _dna_engine_get_log_tags();
  }

  late final _dna_engine_set_log_tags = _lib.lookupFunction<
      Int32 Function(Pointer<Utf8>),
      int Function(Pointer<Utf8>)>('dna_engine_set_log_tags');

  int dna_engine_set_log_tags(Pointer<Utf8> tags) {
    return _dna_engine_set_log_tags(tags);
  }

  // ---------------------------------------------------------------------------
  // DEBUG LOG RING BUFFER
  // ---------------------------------------------------------------------------

  late final _dna_engine_debug_log_enable = _lib.lookupFunction<
      Void Function(Bool),
      void Function(bool)>('dna_engine_debug_log_enable');

  void dna_engine_debug_log_enable(bool enabled) {
    _dna_engine_debug_log_enable(enabled);
  }

  late final _dna_engine_debug_log_is_enabled = _lib.lookupFunction<
      Bool Function(),
      bool Function()>('dna_engine_debug_log_is_enabled');

  bool dna_engine_debug_log_is_enabled() {
    return _dna_engine_debug_log_is_enabled();
  }

  late final _dna_engine_debug_log_get_entries = _lib.lookupFunction<
      Int32 Function(Pointer<dna_debug_log_entry_t>, Int32),
      int Function(Pointer<dna_debug_log_entry_t>, int)>('dna_engine_debug_log_get_entries');

  int dna_engine_debug_log_get_entries(Pointer<dna_debug_log_entry_t> entries, int maxEntries) {
    return _dna_engine_debug_log_get_entries(entries, maxEntries);
  }

  late final _dna_engine_debug_log_count = _lib.lookupFunction<
      Int32 Function(),
      int Function()>('dna_engine_debug_log_count');

  int dna_engine_debug_log_count() {
    return _dna_engine_debug_log_count();
  }

  late final _dna_engine_debug_log_clear = _lib.lookupFunction<
      Void Function(),
      void Function()>('dna_engine_debug_log_clear');

  void dna_engine_debug_log_clear() {
    _dna_engine_debug_log_clear();
  }

  late final _dna_engine_debug_log_message = _lib.lookupFunction<
      Void Function(Pointer<Utf8>, Pointer<Utf8>),
      void Function(Pointer<Utf8>, Pointer<Utf8>)>('dna_engine_debug_log_message');

  void dna_engine_debug_log_message(String tag, String message) {
    final tagPtr = tag.toNativeUtf8();
    final msgPtr = message.toNativeUtf8();
    _dna_engine_debug_log_message(tagPtr, msgPtr);
    malloc.free(tagPtr);
    malloc.free(msgPtr);
  }

  late final _dna_engine_debug_log_message_level = _lib.lookupFunction<
      Void Function(Pointer<Utf8>, Pointer<Utf8>, Int32),
      void Function(Pointer<Utf8>, Pointer<Utf8>, int)>('dna_engine_debug_log_message_level');

  void dna_engine_debug_log_message_level(String tag, String message, int level) {
    final tagPtr = tag.toNativeUtf8();
    final msgPtr = message.toNativeUtf8();
    _dna_engine_debug_log_message_level(tagPtr, msgPtr, level);
    malloc.free(tagPtr);
    malloc.free(msgPtr);
  }
